--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -28,12 +28,14 @@ framework:
 twig:
   debug: "%kernel.debug%"
   strict_variables: "%kernel.debug%"
+  globals:
+    locale: "%locale%"
 
 # Assetic Configuration
 assetic:
   debug: "%kernel.debug%"
   use_controller: false
-  bundles: [ ]
+  bundles: [CustomerHuntSiteBundle]
 #  java: /usr/bin/java
   filters:
     cssrewrite: ~
