Реализовано редактирование проектов
Реализовано добавление, редактирование и удаление проектов

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+projects:
+  resource: "@CustomerHuntSiteBundle/Controller/ProjectsController.php"
+  prefix: /projects
+  type: annotation
+
 security:
   resource: "@CustomerHuntSiteBundle/Controller/SecurityController.php"
   prefix: /
