--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,7 +11,7 @@ security:
       pattern: ^/(_(profiler|wdt|error)|css|images|js)/
       security: false
     site_login:
-      pattern: ^/login
+      pattern: ^/login$
       anonymous: ~
     site:
       pattern: ^/
@@ -33,5 +33,5 @@ security:
         path: site_security_logout
         target: site_security_login
   access_control:
-    - { path: ^/login, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+    - { path: ^/login$, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
     - { path: ^/, roles: [ROLE_ADMIN] }
