--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,6 @@
 security:
   encoders:
-    CustomerHunt\SystemBundle\Entity\User: bcrypt
+    CustomerHunt\SystemBundle\Entity\User: sha1
   role_hierarchy:
     ROLE_ADMIN: [ROLE_USER]
   providers:
