Начата работа над разделом страниц

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+pages:
+  resource: "@CustomerHuntSiteBundle/Controller/PagesController.php"
+  prefix: /projects
+  type: annotation
+
 test_pages:
   resource: "@CustomerHuntSiteBundle/Controller/TestPagesController.php"
   prefix: /projects
