--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+api:
+  resource: "@CustomerHuntSiteBundle/Controller/ApiController.php"
+  prefix: /api
+  type: annotation
+
 pages:
   resource: "@CustomerHuntSiteBundle/Controller/PagesController.php"
   prefix: /projects
