--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -28,6 +28,11 @@ test_pages:
   prefix: /
   type: annotation
 
+project_settings:
+  resource: "@CustomerHuntSiteBundle/Controller/ProjectSettingsController.php"
+  prefix: /
+  type: annotation
+
 projects:
   resource: "@CustomerHuntSiteBundle/Controller/ProjectsController.php"
   prefix: /
