--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -39,4 +39,6 @@ security:
   access_control:
     - { path: /api, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
     - { path: ^/login$, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
-    - { path: ^/, roles: [ROLE_ADMIN] }
+    - { path: ^/settings, roles: [ROLE_ADMIN] }
+    - { path: ^/users, roles: [ROLE_ADMIN] }
+    - { path: ^/, roles: [ROLE_USER] }
